# devsage-ai-agent

./: .pre-commit-config.yaml  Makefile  README.md  devsage-activate.ps1  install-devsage.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  structure.md
.github/workflows/: cd.yml  ci.yml  release.yml  tests.yml
agents/: coordinator.py  executor.py  reader.py  writer.py
core/: config.py
data/: code_index.json
docker/: docker-compose.yml
extensions/vscode/: extension.js
gui/: main.js
gui/ai-client/: index.html  package.json  pnpm-lock.yaml
languages/: base.py  manager.py
languages/python/: executer.py
scripts/: README_index.md  index_codebase.py
tests/unit/: test_index_codebase.py
tests/unit/fixtures/: test_index.json
tests/unit/fixtures/sample_files/: test.js  test.py  test.txt
